Added rogue character and vampire enemy
note: error on the revive skill of the cleric because of logic issues