@@ -17,7 +17,7 @@ import java.util.List;
 public class Cleric extends JobClass {
 
     public Cleric() {
-        super("Cleric", "Wields Healing and love", 10, 0);
+        super("Cleric", "Wields Healing and love", 0, 60);
         AssetManager.getInstance().registerAnimation(
                 "CLERIC_IDLE",
                 "Assets/Animations/Heroes/Cleric/Idle/sprite_%d.png",
@@ -56,6 +56,22 @@ public class Cleric extends JobClass {
             }, true);
         };
 
+        SkillLogicConsumer reviveLogic = (self, user, targets, onSkillComplete) -> {
+            Character target = targets.getFirst();
+            LogManager.log(self.getActionLog(user, "Revives", targets), LogColor.HERO_ACTION);
+
+            int revive_health= (int)(target.getInitialHealth() * .20);
+
+//            VisualEffectsManager.getInstance().hideCharacterVisual(user);
+            VisualEffectsManager.getInstance().playAnimation("CLERIC_HEAL", user, () -> {
+                target.setHealth(revive_health);
+                if (onSkillComplete != null) {
+                    onSkillComplete.run();
+//                    VisualEffectsManager.getInstance().restoreCharacterVisual(user);
+                }
+            }, true);
+        };
+
         SkillLogicConsumer healGroupLogic = (self, user, targets, onSkillComplete) -> {
 
 
@@ -76,7 +92,7 @@ public class Cleric extends JobClass {
         };
 
         SkillLogicConsumer BashLogic = (self, user, targets, onSkillComplete) -> {
-            Character target = targets.get(0);
+            Character target = targets.getFirst();
 
             int calculateDamage = ScalingLogic.calculateDamage(user,20,20,0.02,0.005);
 
@@ -100,12 +116,17 @@ public class Cleric extends JobClass {
                 SkillType.HEAL, SkillAction.MAGICAL, TargetType.AOE_ALL_TARGETS, TargetCondition.ALIVE,
                 healGroupLogic
         );
+        Skill Revive = new Skill(
+                "Revive", "Revive a teammate", 50, 0,
+                SkillType.HEAL, SkillAction.MAGICAL, TargetType.SINGLE_TARGET, TargetCondition.DEAD,
+                reviveLogic
+        );
         Skill BashStaff = new Skill(
                 "Bash Staff", "Healing their teammate", 10, 20,
                 SkillType.HEAL, SkillAction.MAGICAL, TargetType.SINGLE_TARGET, TargetCondition.ALIVE,
                 BashLogic
         );
 
-        return List.of(HealSelf,HealGroup,BashStaff);
+        return List.of(HealSelf,HealGroup,BashStaff,Revive);
     }
 }
