@@ -18,7 +18,7 @@ import java.util.List;
 
 public class CryoMancer extends JobClass {
     public CryoMancer(){
-        super("Ice Mage","Wields snow and ice as its magic",0,0 );
+        super("Ice Mage","Wields snow and ice as its magic",0,60 );
         AssetManager.getInstance().registerAnimation(
                 "MAGE_ICE-IDLE",
                 "Assets/Animations/Heroes/Mage-Ice/Idle/sprite_%d.png",
@@ -49,7 +49,7 @@ public class CryoMancer extends JobClass {
 
         SkillLogicConsumer iceSpikeLogic = (self, user, targets, onSkillComplete) -> {
             int calculateDamage = ScalingLogic.calculateDamage(user,30,15,1.2,0.05);
-            Character target = targets.get(0);
+            Character target = targets.getFirst();
 
             LogManager.log(self.getActionLog(user, self.getSkillAction().getActionVerb(), targets), LogColor.HERO_ACTION);
 
@@ -72,7 +72,7 @@ public class CryoMancer extends JobClass {
 
         SkillLogicConsumer frostBiteLogic = (self, user, targets, onSkillComplete) -> {
             int calculateDamage = ScalingLogic.calculateDamage(user,15,15,1.2,0.05);
-            Character target = targets.get(0);
+            Character target = targets.getFirst();
 
             LogManager.log(self.getActionLog(user, self.getSkillAction().getActionVerb(), targets), LogColor.HERO_ACTION);
 
