@@ -18,7 +18,7 @@ import java.util.List;
 
 public class EarthMage extends JobClass {
     public EarthMage(){
-        super("Earth Mage","Wields stone and earth as its magic",0,0 );
+        super("Earth Mage","Wields stone and earth as its magic",0,60 );
 
         AssetManager.getInstance().registerAnimation(
                 "MAGE_EARTH-IDLE",
@@ -97,7 +97,7 @@ public class EarthMage extends JobClass {
 
         SkillLogicConsumer stoneHailLogic = (self, user, targets, onSkillComplete) -> {
             int calculateDamage = ScalingLogic.calculateDamage(user,20,10,1.2,0.05);
-            Character target = targets.get(0);
+            Character target = targets.getFirst();
             target.takeDamage(calculateDamage, user, self);
             LogManager.log(self.getActionLog(user, "Multitudes of earth crumbles down", targets), LogColor.HERO_ACTION);
             VisualEffectsManager.getInstance().playAnimationOnCharacter("STONE_HAIL", target, () -> {
